@@ -34,6 +34,7 @@ using Raspberry;
 using Newtonsoft.Json;
 using System.Diagnostics;
 using HomeGenie.Service.Constants;
+using HomeGenie.Service.Logging;
 
 namespace HomeGenie
 {
@@ -48,6 +49,10 @@ namespace HomeGenie
             AppDomain.CurrentDomain.UnhandledException += UnhandledExceptionTrapper;
 
             Console.OutputEncoding = Encoding.UTF8;
+            var outputRedirect = new ConsoleRedirect();
+            Console.SetOut(outputRedirect);
+            Console.SetError(outputRedirect);
+
             /* Change current culture
             CultureInfo culture = CultureInfo.CreateSpecificCulture("en-US");
             System.Threading.Thread.CurrentThread.CurrentCulture = culture;
@@ -201,6 +206,57 @@ namespace HomeGenie
                 Property = "HomeGenie.UnhandledException",
                 Value = e.ExceptionObject.ToString()
             });
+        }
+
+    }
+
+    public class ConsoleRedirect : TextWriter
+    {
+        private string lineBuffer = "";
+
+        public override void Write(string message)
+        {
+            string newLine = new string(CoreNewLine);
+            if (message.IndexOf(newLine) >= 0)
+            {
+                string[] parts = message.Split(CoreNewLine);
+                if (message.StartsWith(newLine))
+                    this.WriteLine(this.lineBuffer);
+                else
+                    parts[0] = this.lineBuffer + parts[0];
+                this.lineBuffer = "";
+                if (parts.Length > 1 && !parts[parts.Length - 1].EndsWith(newLine))
+                {
+                    this.lineBuffer += parts[parts.Length - 1];
+                    parts[parts.Length - 1] = "";
+                }
+                foreach (var s in parts)
+                {
+                    if (!String.IsNullOrWhiteSpace(s))
+                        this.WriteLine(s);
+                }
+                message = "";
+            }
+            this.lineBuffer += message;
+        }
+        public override void WriteLine(string message)
+        {
+            if (SystemLogger.Instance.IsLogEnabled && !string.IsNullOrWhiteSpace(message))
+            {
+                // log entire line into the "Domain" column
+                SystemLogger.Instance.WriteToLog(new HomeGenie.Data.LogEntry() {
+                    Domain = "# " + this.lineBuffer + message
+                });
+            }
+            this.lineBuffer = "";
+        }
+
+        public override System.Text.Encoding Encoding
+        {
+            get
+            {
+                throw new NotImplementedException();
+            }
         }
 
     }
